test_regress/t/t_gate_delay_unsup.out
%Warning-RISEFALLDLY: t/t_gate_basic.v:25:15: Unsupported: turn-off delays. Ignoring the third delay
   25 |   nand  #(2,3,4) ND0 (nd0, a[0], b[0], b[1]);
      |               ^
                      ... For warning description see https://verilator.org/warn/RISEFALLDLY?v=latest
                      ... Use "/* verilator lint_off RISEFALLDLY */" and lint_on around source to disable this message.
%Error: Exiting due to
